# megano_

diploma-backend/megano/: Dockerfile  docker-compose.yaml  pyproject.toml
diploma-backend/megano/accounts/: admin.py  models.py  serializers.py  urls.py  views.py
diploma-backend/megano/basket/: admin.py  models.py  serializers.py  views.py
diploma-backend/megano/catalog/: serializers.py  urls.py  views.py
diploma-backend/megano/megano/: settings.py
diploma-backend/megano/orders/: admin.py  models.py  serializer.py  urls.py  views.py
diploma-backend/megano/products/: admin.py  models.py  serializers.py  views.py
